<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etx_nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/nota_prova_1"
        android:textColorHint="@color/white"
        android:padding="25dp"
        android:text=""
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <EditText
        android:id="@+id/etx_nota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/nota_prova_2"
        android:padding="25dp"
        android:text=""
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <EditText
        android:id="@+id/etx_nota3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/nota_prova_3"
        android:padding="25dp"
        android:text=""
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <EditText
        android:id="@+id/etx_nota4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/nota_prova_4"
        android:padding="25dp"
        android:text=""
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <EditText
        android:id="@+id/etx_numero_faltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/numero_faltas"
        android:padding="25dp"
        android:text=""
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/calcular_media"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/button_red"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline4" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_foi_aprovado"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_calcular"
        app:layout_constraintStart_toStartOf="@+id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>